--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: Inter;
+  src: url("/fonts/inter-regular.ttf");
+}
+
+* {
+  font-family: Inter;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
