--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: Inter;
-  src: url("/fonts/inter-regular.ttf");
+  font-family: Poppins;
+  src: url("/fonts/poppins.ttf");
 }
 
 * {
-  font-family: Inter;
+  font-family: Poppins;
 }
